<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPaymentFromPaymentScreen">

    <ScrollView
        android:layout_width="294dp"
        android:layout_height="244dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/PScreen_CreditCardNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/credit_card"
                android:inputType="number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/PScreen_FullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:textColor="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/PScreen_Street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/street_address"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/PScreen_City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/PScreen_State"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/state"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:id="@+id/PScreen_ZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/zip_code"
                android:inputType="number" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>