<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".CreateAccount">

    <androidx.cardview.widget.CardView
        android:id="@+id/view2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/HScreen_ProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/profileimagebtncreateaccount"
            app:srcCompat="@mipmap/ic_launcher" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/editTextTextPersonLastName"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="320dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name_CreateAccount"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CreatAccountNext"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="647dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/royal_Blue"
        android:text="@string/nextButtonCreateAccount"
        android:textColor="#FFFFFF"
        app:cornerRadius="15dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAccountBackBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="647dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="36dp"
        android:background="#00FFFFFF"
        android:backgroundTint="@color/royal_Blue"
        android:text="@string/backBtnCreateAccount"
        android:textColor="#FFFFFF"
        app:cornerRadius="15dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="480dp"
        android:ems="10"
        android:hint="@string/email_CreateAccount"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editStudentID"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="148dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/studentIDCreateAccount"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonFirstName"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:hint="@string/first_nameCreateAccount"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="404dp"
        android:ems="10"
        android:hint="@string/prompt_Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pBarCreateAccount"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
        android:layout_width="147dp"
        android:layout_height="147dp"
        android:layout_marginTop="228dp"
        android:foregroundTint="@color/royal_Blue"
        android:indeterminateTint="@color/royal_Blue"
        android:progressTint="@color/royal_Blue"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonFirstName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonFirstName"
        app:layout_constraintTop_toTopOf="parent"></ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>