<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="?android:attr/windowBackground"
    tools:context=".HomeScreen">

    <View
        android:id="@+id/PScreenBorderTop2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="64dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/HScreen_ProfilePic"
        android:layout_width="98dp"
        android:layout_height="92dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="165dp"
        android:contentDescription="@string/hscreenprofilepic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:mipmap/sym_def_app_icon" />

    <View
        android:id="@+id/PScreenBorderBtm2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="616dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/HScreen_Title"
        android:layout_width="267dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:text="@string/your_current_balances"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingsHScreenBtn"
        android:layout_width="76dp"
        android:layout_height="52dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/settings_homescreenbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settingsicon" />

    <ImageButton
        android:id="@+id/homeScreenBtn"
        android:layout_width="104dp"
        android:layout_height="84dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="616dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/homescreen_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_black_24dp" />

    <ImageButton
        android:id="@+id/calenderHScreenBtn"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="616dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/calender_for_homescreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eraucalender_foreground" />

    <ImageButton
        android:id="@+id/hideDollarsBtn"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="132dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/hidesdollars"
        android:tint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />

    <ImageButton
        android:id="@+id/paymentHScreenBtn"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="616dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/payment_for_homescreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eraucmoney_foreground" />

    <LinearLayout
        android:id="@+id/ProgressBarLayout"
        android:layout_width="225dp"
        android:layout_height="274dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="184dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/Meal_PlansBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="15dp"
            android:background="#FFFFFF"
            android:endColor="#FFFFFF"
            android:foregroundTint="@color/white"
            android:progress="25"
            android:progressBackgroundTint="?attr/colorButtonNormal"
            android:progressDrawable="@drawable/myprogressbar1"
            android:progressTint="?android:attr/colorEdgeEffect" />

        <ProgressBar
            android:id="@+id/SodexoBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="196dp"
            android:layout_height="38dp"
            android:layout_margin="15dp"
            android:progress="25"
            android:progressBackgroundTint="?attr/colorButtonNormal"
            android:progressDrawable="@drawable/myprogressbar1"
            android:progressTint="?android:attr/colorEdgeEffect" />

        <ProgressBar
            android:id="@+id/Dinning_DollarsBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="196dp"
            android:layout_height="38dp"
            android:layout_margin="15dp"
            android:progress="25"
            android:progressBackgroundTint="?attr/colorButtonNormal"
            android:progressDrawable="@drawable/myprogressbar1"
            android:progressTint="?android:attr/colorEdgeEffect" />

        <ProgressBar
            android:id="@+id/Eagle_DollarsBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="15dp"
            android:progress="25"
            android:progressBackgroundTint="?attr/colorButtonNormal"
            android:progressDrawable="@drawable/myprogressbar1"
            android:progressTint="?android:attr/colorEdgeEffect" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ProgressNameLayout"
        android:layout_width="132dp"
        android:layout_height="274dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="184dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Meal_Plan_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/meal_plans_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Sodexo_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/sodexo_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Dinning_Dollars_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/dinning_dollars_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Eagle_Dollars_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/eagle_dollars_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pBarHScreen"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
        android:layout_width="140dp"
        android:layout_height="138dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="456dp"
        android:background="#00FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:indeterminateTint="?android:attr/colorEdgeEffect"
        android:progressTint="?android:attr/colorEdgeEffect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ProgressBar>

    <TextView
        android:id="@+id/scannerProcessText"
        android:layout_width="89dp"
        android:layout_height="34dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="508dp"
        android:text="@string/processingScannerText"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cardEmulatorHScreenBtn"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/PScreenBorderTop2"
        app:layout_constraintEnd_toStartOf="@+id/HScreen_ProfilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cardemulator" />


</androidx.constraintlayout.widget.ConstraintLayout>