<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HiddenPages">

    <TextView
        android:id="@+id/hiddenPage_Title"
        android:layout_width="315dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_to_the_team"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/hiddenPageBorderTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="64dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#000000"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/hiddenPageCalBtn"
        android:layout_width="134dp"
        android:layout_height="84dp"
        android:layout_marginTop="631dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/calender_for_homescreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eraucalender_foreground" />

    <ImageButton
        android:id="@+id/hiddenPageHomeBtn"
        android:layout_width="140dp"
        android:layout_height="84dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="631dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/homescreen_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_black_24dp" />

    <ImageButton
        android:id="@+id/hiddenPagePayBtn"
        android:layout_width="134dp"
        android:layout_height="84dp"
        android:layout_marginStart="277dp"
        android:layout_marginTop="631dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/payment_for_homescreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eraucmoney_foreground" />

    <View
        android:id="@+id/hiddenPageBorderBtm"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="628dp"
        android:layout_marginBottom="102dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>